--- a/networks.Rmd
+++ b/networks.Rmd
@@ -2,8 +2,9 @@
 title: "Networks of financial actors"
 author: "Juan Rocha"
 date: "Last update `r Sys.Date()`"
-
 output: html_notebook
+editor_options: 
+  chunk_output_type: inline
 ---
 
 ```{r setup, include=FALSE}
