--- a/Notes.Rmd
+++ b/Notes.Rmd
@@ -30,3 +30,9 @@ The following vertices appear in both columns:
 	- Oji Holdings Corporation
 
 One could force it to be bipartite by changing name according to category. Once bipartite, use the one mode projections to calculate network statistics more relevant for influence. For example a weighted betweenness or something like that. 
+
+### EGRMs
+
+- use constraints on degree: keep degrees constant. But not sure how to code it
+- Play with control features:
+        - MCMCLE.maxit = < 60 which is the current default (how do I get the defaults?)
